--- a/HTML/ComputerStudies_glitch_website.htm
+++ b/HTML/ComputerStudies_glitch_website.htm
@@ -3,9 +3,9 @@
     <head>
         <title>Tanish's Website</title>
         <meta charset="UTF-8" name="viewport">
-        <link rel="stylesheet" href="Css-1.css">
-        <link rel="stylesheet" href="codepen_glitch_modify.css">
-        <script src="Javascript_glitch.jsx"></script>
+        <link rel="stylesheet" href="../CSS/Css-1.css">
+        <link rel="stylesheet" href="../CSS/codepen_glitch_modify.css">
+        <script src="../Javascript/Javascript_glitch.jsx"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
         <style>
             /* Firefox old*/
